--- a/k8s/prime-gw/templates/service.yaml
+++ b/k8s/prime-gw/templates/service.yaml
@@ -8,7 +8,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      nodePort: 30002
       protocol: TCP
       name: http
   selector:
