feat: add liveness readiness

--- a/k8s/prime-gw/templates/serviceaccount.yaml
+++ b/k8s/prime-gw/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "prime.serviceAccountName" . }}
+  name: {{ include "prime-gw.serviceAccountName" . }}
   labels:
-    {{- include "prime.labels" . | nindent 4 }}
+    {{- include "prime-gw.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
