--- a/k8s/prime/values.yaml
+++ b/k8s/prime/values.yaml
@@ -4,11 +4,18 @@
 
 replicaCount: 1
 
-image:
-  repository: samutup/primer-checker
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: "1.0.0"
+images:
+  prime: 
+    repository: samutup/primer-checker
+    pullPolicy: IfNotPresent
+    # Overrides the image tag whose default is the chart appVersion.
+    tag: "1.0.0"
+  primeGw:
+    repository: samutup/primer-gw
+    pullPolicy: IfNotPresent
+    # Overrides the image tag whose default is the chart appVersion.
+    tag: "2.0.3"
+
 
 imagePullSecrets: []
 nameOverride: ""
@@ -81,3 +88,8 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+sessionId: session-1
+assemblyType: cdr
+used: true
+capabilities: |
+  [{\"assemblyType\": \"cdr\",\"capabilities\": [{\"capabilityType\": \"Coupling_Ass\"},{\"capabilityType\": \"FlightPlan_Ass\"},{\"capabilityType\": \"SystemTrack_Ass\"},{\"capabilityType\": \"AiracData_Ass\"}]}]
