--- a/k8s/prime-gw/values.yaml
+++ b/k8s/prime-gw/values.yaml
@@ -37,21 +37,21 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: NodePort
+  type: ClusterIP
   port: 8002
 
 ingress:
-  enabled: false
+  enabled: true
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: sample.house.com
       paths:
       - path: /
         backend:
-          serviceName: chart-example.local
-          servicePort: 80
+          serviceName: prime-gw
+          servicePort: 8002
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
