--- a/k8s/prime/templates/service.yaml
+++ b/k8s/prime/templates/service.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -11,5 +12,21 @@ spec:
       port: {{ .Values.service.port }}
       protocol: TCP
       targetPort: 8001
+  selector:
+    {{- include "prime.selectorLabels" . | nindent 4 }}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: prime-gw
+  labels:
+    {{- include "prime.labels" . | nindent 4 }}
+spec:
+  type: {{ .Values.service.type }}
+  ports:
+    - name: prime-gw
+      port: 8002
+      protocol: TCP
+      targetPort: 8002
   selector:
     {{- include "prime.selectorLabels" . | nindent 4 }}
