--- a/k8s/prime/values.yaml
+++ b/k8s/prime/values.yaml
@@ -14,7 +14,7 @@ images:
     repository: samutup/primer-gw
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
-    tag: "2.0.3"
+    tag: "2.0.7"
 
 
 imagePullSecrets: []
@@ -48,17 +48,17 @@ service:
   port: 80
 
 ingress:
-  enabled: false
+  enabled: true
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: sample.house.io
       paths:
       - path: /
         backend:
-          serviceName: chart-example.local
-          servicePort: 80
+          serviceName: primer-gw
+          servicePort: 8002
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
@@ -91,5 +91,13 @@ affinity: {}
 sessionId: session-1
 assemblyType: cdr
 used: true
-capabilities: |
-  [{\"assemblyType\": \"cdr\",\"capabilities\": [{\"capabilityType\": \"Coupling_Ass\"},{\"capabilityType\": \"FlightPlan_Ass\"},{\"capabilityType\": \"SystemTrack_Ass\"},{\"capabilityType\": \"AiracData_Ass\"}]}]
+capabilities: 
+- capabilityType: Coupling_aaS
+  openATMVersions:
+  - v1.2
+  - v3.0
+  dependencies: []
+  domainLabels:
+  - ATC
+  sessionId: 20ac5aa5-c0c6-4321-a3e5-775e4a7b111
+  isDataSource: true
